# url2md

./: .gitignore  CHANGELOG.md  CLAUDE.md  DOCUMENTATION.md  NOTES.md  README.md  class.json  main.py  pyproject.toml
docs/: 20250613-resource-support.md  20250614-error-handling.md  20250615-architecture.md  20250615-development-history.md  20250616-translation-strategy.md  20250621-schema-compatibility.md  20250621-schema-migration-1.md  20250621-schema-migration-2.md  README.md  architecture.md  development-history.md  error-handling.md  resource-support.md  schema-migration-1.md  schema-migration-2.md  schema-migration.md  testing.md  translation-strategy.md  troubleshooting.md
schemas/: classify.json  summarize.json
tests/: README.md  test_cache.md  test_cache.py  test_cache_dir_detection.md  test_cache_dir_detection.py  test_cache_io.md  test_cache_io.py  test_cache_translate.md  test_cache_translate.py  test_integration.md  test_integration.py  test_models.py  test_report.md  test_report.py  test_report_translations.md  test_report_translations.py  test_schema_structure.md  test_schema_structure.py  test_summarize.md  test_summarize.py  test_translation_cache.md  test_translation_cache.py  test_urlinfo.md  test_urlinfo.py  test_utils.md  test_utils.py
url2md/: README.md  __init__.md  __init__.py  cache.md  cache.py  classify.md  classify.py  classify_schema.md  classify_schema.py  download.md  download.py  fetch.md  fetch.py  gemini.py  main.md  main.py  models.py  report.md  report.py  schema.md  schema.py  summarize.md  summarize.py  summarize_schema.md  summarize_schema.py  terminal.py  translate.md  translate.py  translate_schema.md  translate_schema.py  translation_cache.md  translation_cache.py  tsv_manager.md  tsv_manager.py  urlinfo.md  urlinfo.py  utils.md  utils.py
url2md/schemas/: classify.json  summarize.json  translate.json
